fix filterbar overflow on mobile

--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -15,8 +15,8 @@ app-search-filterbar {
     }
     @media screen and (max-width: $filterBarSpanScreenThreshold) {
         position: fixed;
-        height: 100vh;
-        width: 100vw;
+        height: 100%;
+        width: 100%;
         top: 0;
         left: 0;
         z-index: 1;
